# act

./: .gitignore  benchmark.md  history.md  install.md  pyproject.toml
.nautilus/: benchmark-spec.json  install_plan.json  probe.json
.nautilus/run-log/: 01-env-generator.md
detr/: pyproject.toml
docker/: Dockerfile  README.md  docker-compose.headless.yaml  docker-compose.x11.yaml  entrypoint.sh
scripts/: run_demo.py  run_eval.py
tests/: test_random_policy_server.py
