[project]
name = "detr"
version = "0.0.0"
description = "DETR model modules used by ACT (extracted + modified from facebookresearch/detr)."
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = { text = "Apache-2.0" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "util*"]
